<resources>
    <string name="app_name">BikeShareV3</string>
    <string name="what_bike">What Bike?</string>
    <string name="last_added">Last Added</string>
    <string name="start_ride">Start Ride</string>
    <string name="end_ride">End Ride</string>
    <string name="start_or_end_ride">Start or end a ride</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bike_name">Bike Name</string>
    <string name="ride_start_time">Ride Start Time</string>
    <string name="ride_end_time">Ride End Time</string>
    <string name="bike_location">Bike location</string>
    <string name="bike_type">Bike Type</string>
    <string name="bike_price">Bike Price</string>
    <string name="take_bike_photo">Take bike photo</string>
    <string name="register_new_bike">Register new bike</string>
    <string name="add_new">Add new</string>
    <string name="all_rides">All Rides</string>
    <string name="my_wallet">My Wallet</string>
    <string name="dollar">$</string>
    <string name="arrow_right"><![CDATA[->]]></string>
    <string name="ride_symbol">Ride symbol</string>
    <string name="money_symbol">Money symbol</string>
    <string name="time_symbol">Time symbol</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="selected_bike">Selected Bike</string>
    <string name="available_bikes">Available Bikes</string>
    <string name="bike_start_location">Bike Start Location</string>
    <string name="ride_location_placeholder">lat: 45.1234567, lng: 56.1234567</string>
    <string name="bike_end_location">Bike End Location</string>
</resources>
