<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ride_list_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/ride_list_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="#E2D8D8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/all_rides_current_ride_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Current Ride"
            android:textSize="24sp">Current Ride

        </TextView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/all_rides_ride_type_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bike_type" />

                <TextView
                    android:id="@+id/all_rides_ride_start_time_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ride_start_time" />

                <TextView
                    android:id="@+id/all_rides_ride_price_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bike_price" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/all_rides_ride_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/bike_type" />

                <EditText
                    android:id="@+id/all_rides_ride_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/ride_start_time" />

                <EditText
                    android:id="@+id/all_rides_ride_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/bike_price" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/all_rides_ride_end_ride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#5F70CC"
            android:text="@string/end_ride" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName"
        android:text="Previous Rides" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00A59898"
        android:paddingLeft="6sp"
        android:paddingRight="6sp"
        android:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>